Completed up to Assignment 4
- Created Home, About, and Post templates
- moved global queries to context_processors
-  Built topic ListView
- Built topic DetailView
- Defined get_absolute_url on Topic Model and Post Model
- Linked topics to detailed page on the site
- Added links to topics sidebars on home and about pages
- Added a link to "Topics" on main navigation bar
- Made post detail page where each post has related topics, and each topic linked to its page

--- a/blog/static/blog/base.css
+++ b/blog/static/blog/base.css
@@ -16,6 +16,15 @@ body {
     padding-top: 70px;
 }
 
+a {
+  text-decoration:none;
+  color: #fdf6e3;
+}
+
+a:hover {
+  font-weight: bold;
+}
+
 /* Makes flex container take up all available space,
 pushing other elements like footer to the bottom */
 .container {
@@ -69,5 +78,21 @@ p {
 .header .container {
   position: relative;
   z-index: 1;
+}
+
+/* Footer Section */
+
+#site-footer a {
+  color: #fdf6e3; /* matches your body text color */
+  text-decoration: none;
+}
+
+#site-footer a:hover {
+  color: #ffffff; /* optional: brighter on hover */
+  text-decoration: underline;
+}
+
+main {
+  flex: 1;
 }
 
