--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,15 +20,15 @@
     <nav class="navbar navbar-expand-md navbar-dark text-white fixed-top">
         <div class="container">
             <!-- Logo generated at: https://cooltext.com/Logo-Design-Miami -->
-            <a class="navbar-brand" href="#"><img src="{% static 'blog/images/logo.png' %}" alt="The Gamers' Blog"></a>
+            <a class="navbar-brand" href="{% url "home" %}"><img src="{% static 'blog/images/logo.png' %}" alt="The Gamers' Blog"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Posts</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url "about" %}">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url "post-list" %}">Posts</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url "topic-list" %}">Topics</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
                 </ul>
             </div>
@@ -41,6 +41,11 @@
             {% endblock %}
         </div>
     </main>
+
+    <footer id="site-footer" class="py-4 mt-5 text-center">
+        Copyright &copy; {% now 'Y' %} -
+        <a href="{% url "terms-and-conditions" %}">Terms & conditions</a>
+    </footer>
 
     <!-- BOOTSTRAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
