--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -29,7 +29,8 @@
                     <li class="nav-item"><a class="nav-link text-white" href="{% url "about" %}">About</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="{% url "post-list" %}">Posts</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="{% url "topic-list" %}">Topics</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url "contact" %}">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#">Photo Contest</a></li>
                 </ul>
             </div>
         </div>
