--- a/blog/templates/blog/photo_contest.html
+++ b/blog/templates/blog/photo_contest.html
@@ -7,6 +7,7 @@
 <form  enctype="multipart/form-data" method="post">
 {% csrf_token %}
 <table>
+{# Displays the form as a table #}
 {{ form.as_table }}
 </table>
 <button type="submit">Submit</button>
