Corrected and completed assignment 5
Trying to correct something simple from a prior commit created some problems where I lost my work.  For assignment 5, the photo contest page and functionality was created.  Form collected first name, last name, and an image to submit.

--- a/blog/templates/blog/photo_contest.html
+++ b/blog/templates/blog/photo_contest.html
@@ -4,10 +4,10 @@
 
 {% block main %}
 <h1 class="my-5">Photo Contest</h1>
+<p>{% lorem %}</p>
 <form  enctype="multipart/form-data" method="post">
 {% csrf_token %}
 <table>
-{# Displays the form as a table #}
 {{ form.as_table }}
 </table>
 <button type="submit">Submit</button>
